# codingtests

./: 3sum.py  container_with_most_water.py  garden_taps.py  int_to_roman.py  longest_repeating_substring.py  pyproject.toml  reverse_integer.py
fullstack/: compose.yaml
fullstack/next-postgres-example/: Dockerfile  compose.yaml
fullstack/next-postgres-example/nextjs-app/: .env.docker  package-lock.json  package.json
fullstack/next-postgres-example/nextjs-app/prisma/: schema.prisma  seed.ts
fullstack/nextjs-app/: .env  package-lock.json  package.json
fullstack/nextjs-app/prisma/: schema.prisma
fullstack/python-mongo-example/: Dockerfile  compose.yaml  pyproject.toml
interviews/atlassian/ratelimiter/: solution.py
interviews/atlassian/tests/: test_rate_limiter_functionality.py
interviews/slalom/: peak_finder.py  setup_test.py
interviews/slalom/tests/: test_mulitplies.py
leetcode/strangeprinter/: solution.py
leetcode/tests/: __init__.py  test_strange_printer.py
objectorientation/interfaces/: person_interface.py
practice/linkedlist/: solution.py
practice/map/: solution.py
practice/matrixoperations/: solution.py
practice/maxproductthreenumbers/: solution.py
practice/nextlargernumbers/: solution.py
practice/ratelimiter/: hack.py  solution.py
practice/sumdigitsuntilone/: solution.py
practice/tests/: test_linked_list.py  test_map.py  test_matrix_operations.py  test_max_product_three_numbers.py  test_next_larger_numbers.py  test_rate_limiter_fiunctionality.py  test_sum_digitsuntilone.py
practice/threads/: thread_start.py
(+15 files in other folders)
