[tool.poetry]
name = "codingtests"
version = "0.1.0"
description = ""
authors = ["Ben Caldwell <ben.caldwell@messagemedia.com>"]
readme = "README.md"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    ".",
    "tests",
    "integration",
]
[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
